--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@reduxjs/toolkit": "^2.6.1",
     "@tailwindcss/vite": "^4.1.4",
+    "antd": "^5.24.7",
     "daisyui": "^5.0.19",
     "lodash": "4.17.4",
     "lucide-react": "^0.488.0",
