--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-helmet-async": "^2.0.5",
     "react-redux": "^9.2.0",
     "react-router": "^7.5.0",
+    "react-router-dom": "^7.6.1",
     "redux-persist": "^6.0.0",
     "tailwindcss": "^4.1.4"
   },
