--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@tailwindcss/vite": "^4.1.4",
     "antd": "^5.24.7",
     "daisyui": "^5.0.25",
+    "firebase": "^11.9.0",
     "lodash": "4.17.4",
     "lucide-react": "^0.488.0",
     "react": "^19.0.0",
