--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "firebase": "^11.9.0",
     "lodash": "4.17.4",
     "lucide-react": "^0.488.0",
+    "motion": "^12.16.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-helmet-async": "^2.0.5",
